# AIDM

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  run_web.py  universal_dm_config.py
.github/: copilot-instructions.md
aidm/: __init__.py  config.py  dice.py  dm.py  gamestate.py  llm_providers.py  setup.py  web.py
aidm/static/: index.html
docs/: SAVE_LOAD_GUIDE.md
docs/specs/: feat-gguf-import.md  feat-ollama-setup.md  feat-turn-based-ui.md  feat-web-ui.md  fix-npc-auto-creation.md  fix-npc-followup-per-turn.md  refactor-drop-cli.md  refactor-tech-cleanup.md
examples/: ai_dm.py  ai_integration.py
tests/: README.md  test_npc_creation.py  test_providers.py  test_setup.py  test_think.py  test_turns.py  test_web_validation.py
