[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidm"
version = "1.0.0"
description = "A flexible, provider-agnostic AI-powered text RPG system"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Mitchell"}
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
aidm = "run:main"
aidm-web = "run_web:main"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
